FEAT: ADD try again and restart logic

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <div class="playButtons">
             <button class="play" id="btnPlay">Play</button>
+            <button class="play hidden" id="btnTryAgain">Try again</button>
             <button class="hidden btnChoices" id="btnRock">Rock</button>
             <button class="hidden btnChoices" id="btnPaper">Paper</button>
             <button class="hidden btnChoices" id="btnScissors">Scissors</button>
