FEAT[logic]: ADD changing image only for winners

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <header></header>
     <main>
         <div class="billboard">
-            <!-- <img src="img/characters.png" alt="Illustration of animated characters for rock, paper, scissors"> -->
+            <img src="img/characters.png" class="imgBoard" id="imgCharacters"
+                alt="Illustration of animated characters for rock, paper, scissors">
+
+            <img src="img/rock_beat_scissors.png" class="imgBoard hidden" id="imgRockScissors"
+                alt="An animated character of rock beating scissors">
+
+            <img src="img/paper_beats_rock.png" class="imgBoard hidden" id="imgPaperRock" 
+                alt="Animated characters of rock and paper ending together">
+
+            <img src="img/scissors_beat_paper.png" class="imgBoard hidden" id="imgScissorsPaper" 
+                alt="An angry animated scissors while paper cut in pieces in the ground">
         </div>
         <div id="msgBoard">
             Let's settle this like adults.
