FEAT: ADD logic an resources for tied rounds
Add single character images to show when both chose the same

--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
 
             <img src="img/scissors_beat_paper.png" class="imgBoard hidden" id="imgScissorsPaper" 
                 alt="An angry animated scissors while paper cut in pieces in the ground">
+
+            <img src="img/rock.png" class="imgBoard hidden" id="imgRock" 
+                alt="Animated character of rock">
+
+            <img src="img/paper.png" class="imgBoard hidden" id="imgPaper" 
+                alt="Animated character of paper">
+
+            <img src="img/scissors.png" class="imgBoard hidden" id="imgScissors" 
+                alt="Animated character of scissors">
         </div>
         <div id="msgBoard">
             Let's settle this like adults.
