FEAT[style]: ADD Basic page structure and styling

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="main.js" defer></script>    
 </head>
 <body>
-    <header></header>
+    <header>ROCK PAPER SCISSORS</header>
     <main>
         <div class="billboard">
-            <img src="img/characters.png" class="imgBoard" id="imgCharacters"
+            <img src="img/characters.png" class="imgBoard " id="imgCharacters"
                 alt="Illustration of animated characters for rock, paper, scissors">
 
             <img src="img/rock_beat_scissors.png" class="imgBoard hidden" id="imgRockScissors"
@@ -36,11 +36,12 @@
             Let's settle this like adults.
         </div>
         <div class="scoreBoard">
-            <div class="player">Player Score
+            <div class="scoreHeader player">Player Score
                 <div id="playerScore">0</div>
             </div>
-            <div class="computer">Computer Score</div>
-            <div id="computerScore">0</div>
+            <div class="scoreHeader computer">Computer Score
+                <div id="computerScore">0</div>
+            </div>
         </div>
         <div class="playButtons">
             <button class="play" id="btnPlay">Play</button>
@@ -51,7 +52,7 @@
             
         </div>
     </main>
-    <footer></footer>
+    <footer>Github <a href="#">DiegoGo69</a></footer>
 
 </body>
 </html>
