FEAT[style]: ADD image resources and UI styling
Images resources were added and linked, with animated characters
to display depending on the result and stage of the game.
Style for buttons were added, and image shadow responses
for round wins, loses, and ties

--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
         <div id="msgBoard">
             Let's settle this like adults.
         </div>
-        <div class="scoreBoard">
+        <div id="scoreBoard">
             <div class="scoreHeader player">Player Score
-                <div id="playerScore">0</div>
+                <div class='scorePoints' id="playerScore">0</div>
             </div>
             <div class="scoreHeader computer">Computer Score
-                <div id="computerScore">0</div>
+                <div class='scorePoints' id="computerScore">0</div>
             </div>
         </div>
         <div class="playButtons">
-            <button class="play" id="btnPlay">Play</button>
-            <button class="play hidden" id="btnTryAgain">Try again</button>
+            <button id="btnPlay">Play</button>
+            <button class="hidden" id="btnTryAgain">Try again</button>
             <button class="hidden btnChoices" id="btnRock">Rock</button>
             <button class="hidden btnChoices" id="btnPaper">Paper</button>
             <button class="hidden btnChoices" id="btnScissors">Scissors</button>
             
         </div>
     </main>
-    <footer>Github <a href="#">DiegoGo69</a></footer>
+    <footer>Github <a href="https://github.com/diegogo69" target="_blank">DiegoGo69</a></footer>
 
 </body>
 </html>
